form/src/tests/derive/unimplemented_vector.stderr
error[E0277]: the trait bound `u32: form::Form` is not satisfied
  --> $DIR/unimplemented_vector.rs:23:1
   |
23 | #[form]
   | ^^^^^^^ the trait `form::Form` is not implemented for `u32`
   |
   = help: see issue #48214
